# hit-and-miss-integration

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  hello.py  pyproject.toml  requirements.txt  visualize.py
scripts/: combine_metadata.py  deterministic_mandelbrot.py  hello.py  mb_iter_convergence.py  measure_joint_convergence.py  measure_sample_convergence.py  measure_shape_convergence.py  plot_joint_error.py  plot_limit_convergence.py  plot_mandelbrot.py  plot_results.py  plot_sample_adaptive.py  plot_sample_convergence.py  plot_sample_convergence_2.py  plot_shape_convergence.py  sample_adaptive.py
src/hit_and_mandelbrot/: __init__.py  hits.py  mandelbrot.py  random_seed.py  sampling.py  statistics.py
