[project]
name = "hit-and-miss-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.2",
    "pillow>=11.0.0",
    "scipy>=1.14.1",
]

[project.scripts]
hit-and-miss = "hit_and_miss_integration:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
