[project]
name = "hit-and-mandelbrot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Henry Zwart", email = "henrybzwart@gmail.com" },
    { name = "Tika van Bennekum" },
    { name = "Petr Chaluspky" },
]

requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pillow>=11.0.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]

[project.scripts]
hit-and-miss = "hit_and_mandelbrot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
