[project]
name = "hit-and-mandelbrot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Henry Zwart", email = "henrybzwart@gmail.com" },
    { name = "Tika van Bennekum" },
    { name = "Petr Chaluspky" },
]

requires-python = ">=3.12"
dependencies = [
    "bpython>=0.24",
    "matplotlib>=3.9.2",
    "numba==0.60.0",
    "numpy>=2.0",
    "pillow>=11.0.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "sympy>=1.13.3",
    "tqdm>=4.67.0",
]

[project.scripts]
hit-and-miss = "hit_and_mandelbrot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
